# Twinary

./: .gitignore  Promt1.txt  Promt2.txt  README.md  start-macos.command  start-windows.bat
apps/backend/: pyproject.toml
apps/backend/backupflow/: __main__.py
apps/backend/backupflow/api/: cli.py  server.py
apps/backend/backupflow/config/: defaults.py
apps/backend/backupflow/core/: models.py
apps/backend/backupflow/db/: connection.py  repositories.py  schema.py
apps/backend/backupflow/os_adapters/: copy.py
apps/backend/backupflow/sync/: analyzer.py  executor.py  hasher.py  scanner.py
apps/backend/tests/: test_analyzer.py  test_executor.py  test_hasher.py  test_profiles.py
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: i18n.ts  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
docs/: architecture.md  database.md  development.md  install-macos-uk.md  install-windows-uk.md  sync-algorithm.md
