[package]
name = "backupflow"
version = "1.0.0"
description = "BackupFlow desktop shell"
authors = ["BackupFlow"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
